// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form|Checkbox with Checkbox 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5"
    >
      test
    </label>
    <div
      class="MuiFormGroup-root-11 MuiFormGroup-row-12"
    >
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiCheckbox-default-16"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              type="checkbox"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiCheckbox-default-16"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              type="checkbox"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;

exports[`Storyshots Form|Checkbox with Checkbox and Text Iput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5"
    >
      test
    </label>
    <div
      class="MuiFormGroup-root-11 MuiFormGroup-row-12"
    >
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiCheckbox-default-16"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              type="checkbox"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiCheckbox-default-16"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              type="checkbox"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5 MuiInputLabel-root-72 MuiInputLabel-formControl-73 MuiInputLabel-animated-76"
      data-shrink="false"
    >
      test2
    </label>
    <div
      class="MuiInput-root-77 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-85"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;

exports[`Storyshots Form|Radio with Checkbox and Text Iput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5"
    >
      test
    </label>
    <div
      aria-label="test"
      class="MuiFormGroup-root-11 MuiFormGroup-row-12"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiRadio-default-106"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              name="test"
              type="radio"
              value="um"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiRadio-default-106"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              name="test"
              type="radio"
              value="dois"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5 MuiInputLabel-root-72 MuiInputLabel-formControl-73 MuiInputLabel-animated-76"
      data-shrink="false"
    >
      test2
    </label>
    <div
      class="MuiInput-root-77 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-85"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;

exports[`Storyshots Form|Radio with Radio 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5"
    >
      test
    </label>
    <div
      aria-label="test"
      class="MuiFormGroup-root-11 MuiFormGroup-row-12"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiRadio-default-106"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              name="test"
              type="radio"
              value="um"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-13"
      >
        <span
          class="MuiButtonBase-root-32 MuiIconButton-root-26 MuiSwitchBase-root-21 MuiSwitchBase-default-23 MuiRadio-default-106"
        >
          <span
            class="MuiIconButton-label-31"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-35"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-22"
              name="test"
              type="radio"
              value="dois"
            />
          </span>
          <span
            class="MuiTouchRipple-root-41"
          />
        </span>
        <span
          class="MuiTypography-root-48 MuiTypography-body1-57 MuiFormControlLabel-label-15"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;

exports[`Storyshots Form|TextInput with 2 TextInput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5 MuiInputLabel-root-72 MuiInputLabel-formControl-73 MuiInputLabel-animated-76"
      data-shrink="false"
    >
      test
    </label>
    <div
      class="MuiInput-root-77 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-85"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5 MuiInputLabel-root-72 MuiInputLabel-formControl-73 MuiInputLabel-animated-76"
      data-shrink="false"
    >
      test2
    </label>
    <div
      class="MuiInput-root-77 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-85"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;

exports[`Storyshots Form|TextInput with TextInput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-5 MuiInputLabel-root-72 MuiInputLabel-formControl-73 MuiInputLabel-animated-76"
      data-shrink="false"
    >
      test
    </label>
    <div
      class="MuiInput-root-77 MuiInput-formControl-78 MuiInput-underline-81"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-85"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-91"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-92"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-41"
    />
  </button>
</form>
`;
